Backend updates and exception handling